분류 결과에 비슷한 이미지 출력 ( JSONObject 구조 분석 추가 )

--- a/app/src/main/res/layout/activity_http.xml
+++ b/app/src/main/res/layout/activity_http.xml
@@ -6,10 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".HttpActivity">
 
-    <TextView
-        android:id="@+id/result_text"
-        android:scrollbars="vertical"
+    <ListView
+        android:id="@+id/resList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
